deleteDriverFromRide in manageridepat modal V2 (finish before QA)

--- a/Road to Recovery/pages/assignDriverModal.html
+++ b/Road to Recovery/pages/assignDriverModal.html
@@ -16,7 +16,7 @@
             <input placeholder="הזן שם" id="driver" name="driver" autocomplete="off" >
         </div>
         <div class="text-right modal-footer">
-            <button type="button" class="btn btn-danger"  onclick="deleteDriverFromRide()" >הסרה</button>
+            <button type="button" class="btn btn-danger"  id="removeDriverBtn" onclick="deleteDriverFromRide()" >הסרה</button>
             <button type="button" onclick="assignDriverToRidePat()" id="assignDriverConfirm" class="btn btn-secondary">אישור</button>
             <button type="button" class="btn btn-secondary"  onclick="assignDriverToRidePatAbort()" data-dismiss="modal">ביטול</button>
         </div>
