--- a/Road to Recovery/pages/editTimeModal.html
+++ b/Road to Recovery/pages/editTimeModal.html
@@ -30,11 +30,11 @@
                 </select>
                 <br />  <br />
 
+                <label data-toggle="tooltip" title="afternoon">אחה"צ</label>
                 <input type="checkbox" id="editTimeAfterNoonCB" onchange="checkeditTimeAfterNoonCB()" />
-                <label data-toggle="tooltip" title="or afternoon">או אחה"צ</label>
             </div>
             <div class="text-right modal-footer">
-                <button type="button" onclick="editTimeToRidePat()" id="assignDriverConfirm" class="btn btn-secondary">אישור</button>
+                <button type="button" onclick="updateRidePatTime()" id="assignDriverConfirm" class="btn btn-secondary">אישור</button>
                 <button type="button" class="btn btn-secondary" onclick="editTimeAbort()" data-dismiss="modal">ביטול</button>
             </div>
         </div>
